create file structure

--- a/2019.html
+++ b/2019.html
@@ -36,22 +36,22 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contant.html">Contact</a>
+              <a class="nav-link" href="values.html">Values</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
-      </nav>
+    </nav>
 
 
       <main role="main" class="container">
 
-    <h1>The Adjoint School</h1>
+    <h1>The Adjoint School 2019</h1>
 
-    <p> and now i'll write some more stuff</p>
-
-    <p> and now i'll write some more stuff</p>
-
-    <p> and now i'll write some more stuff</p>
+    <p>The 2019 Adjoint School was held in Oxford</p>
+    
 </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
