--- a/2020.html
+++ b/2020.html
@@ -40,18 +40,15 @@
             </li>
           </ul>
         </div>
-      </nav>
+    </nav>
 
 
       <main role="main" class="container">
 
-    <h1>The Adjoint School</h1>
+    <h1>The Adjoint School 2020</h1>
 
-    <p> and now i'll write some more stuff</p>
-
-    <p> and now i'll write some more stuff</p>
-
-    <p> and now i'll write some more stuff</p>
+    <p>The 2020 Adjoint School was held virtually</p>
+    
 </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
