--- a/2018.html
+++ b/2018.html
@@ -36,11 +36,15 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contant.html">Contact</a>
+              <a class="nav-link" href="inclusivity.html">Inclusivity</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
     </nav>
+
 
 
       <main role="main" class="container">
