--- a/inclusivity.html
+++ b/inclusivity.html
@@ -48,10 +48,12 @@
 
       <main role="main" class="container">
 
-    <h1>The Adjoint School 2019</h1>
+    <h1>Inclusivity and values</h1>
 
-    <p>The 2019 Adjoint School was held in Oxford</p>
+    https://www.appliedcategorytheory.org/statement-of-values/
     
+    http://eugeniacheng.com/inclusivity/
+
 </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
