more structure work

--- a/2018.html
+++ b/2018.html
@@ -51,9 +51,42 @@
 
     <h1>The Adjoint School 2018</h1>
 
-    <p>The 2018 Adjoint School was held in Leiden</p>
+    <p>The 2018 Adjoint School featured projects mentored by John Baez, Aleks Kissinger, Martha Lewis, and Pawel Sobocinski. It was organised by Brendan Fong and Nina Otter. The research week was held at the Lorentz Center, Leiden, The Netherlands, in May 2018. </p>
+
+    <h2>Research projects</h2>
+    <p>
+        <b>John Baez: Semantics for open Petri nets and reaction networks</b>
+        <br/>
+
+        Petri nets and reaction networks are widely used to describe systems of interacting entities in computer science, chemistry and other fields, but the study of open Petri nets and reaction networks is new, and raise many new questions connected to Lawvere&#8217;s &#8220;functorial semantics&#8221;.
+        <br/>
+        <i>Reading: Fong; Baez and Pollard.</i>
+    </p>
+    <p>
+        <b>Aleks Kissinger: Unification of the logic of causality</b>
+        <br/>
+
+        Employ the framework of (pre-)causal categories to unite notions of causality and techniques for causal reasoning which occur in classical statistics, quantum foundations, and beyond.
+        <br/>
+        <i>Reading: Kissinger and Uijlen; Henson, Lal, and Pusey.</i>
+    </p>
+    <p>
+        <b>Martha Lewis: Compositional approaches to linguistics and cognition</b>
+        <br/>
+
+        Use compact closed categories to integrate compositional models of meaning with distributed, geometric, and other meaning representations in linguistics and cognitive science.
+        <br/>
+        <i>Reading: Coecke, Sadrzadeh, and Clark; Bolt, Coecke, Genovese, Lewis, Marsden, and Piedeleu.</i>
+    </p>
+    <p>
+        <b>Pawel Sobocinski: Modelling of open and interconnected systems</b>
+        <br/>
+
+        Use Carboni and Walters&#8217; bicategories of relations as a multidisciplinary algebra of open and interconnected systems.
+        <br/>
+        <i>Reading: Carboni and Walters; Willems.</i>
+ 
     <h2>Reading list</h2>
-    <p>Meetings will be on Mondays; we will determine a time depending on the locations of the chosen participants.</p>
     <ul>
         <li>
             Jan 8: A. Kissinger and S. Uijlen. 
@@ -112,38 +145,18 @@
              27, 2014.
         </li>
     </ul>
-    <h2>Research projects</h2>
-    <p>
-        <b>John Baez: Semantics for open Petri nets and reaction networks</b>
-        <br/>
 
-        Petri nets and reaction networks are widely used to describe systems of interacting entities in computer science, chemistry and other fields, but the study of open Petri nets and reaction networks is new, and raise many new questions connected to Lawvere&#8217;s &#8220;functorial semantics&#8221;.
-        <br/>
-        <i>Reading: Fong; Baez and Pollard.</i>
-    </p>
-    <p>
-        <b>Aleks Kissinger: Unification of the logic of causality</b>
-        <br/>
+    <h2>Blog posts</h2>
+    The following blog posts were produced by the students.
+    <ul>
+      <li>Hi there</li>
+    </ul>
 
-        Employ the framework of (pre-)causal categories to unite notions of causality and techniques for causal reasoning which occur in classical statistics, quantum foundations, and beyond.
-        <br/>
-        <i>Reading: Kissinger and Uijlen; Henson, Lal, and Pusey.</i>
-    </p>
-    <p>
-        <b>Martha Lewis: Compositional approaches to linguistics and cognition</b>
-        <br/>
-
-        Use compact closed categories to integrate compositional models of meaning with distributed, geometric, and other meaning representations in linguistics and cognitive science.
-        <br/>
-        <i>Reading: Coecke, Sadrzadeh, and Clark; Bolt, Coecke, Genovese, Lewis, Marsden, and Piedeleu.</i>
-    </p>
-    <p>
-        <b>Pawel Sobocinski: Modelling of open and interconnected systems</b>
-        <br/>
-
-        Use Carboni and Walters&#8217; bicategories of relations as a multidisciplinary algebra of open and interconnected systems.
-        <br/>
-        <i>Reading: Carboni and Walters; Willems.</i>
+    <h2>Papers</h2>
+    Following the research week, the working groups produced the papers:
+    <ul>
+      <li>Hi there</li>
+    </ul>
 </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
