--- a/2020.html
+++ b/2020.html
@@ -50,7 +50,7 @@
 
     <h1>The Adjoint School 2020</h1>
 
-    <p>The 2020 Adjoint School was held virtually</p>
+    <p>The 2020 Adjoint School featured projects mentored by Michael Johnson, Valeria de Paiva, Michael Shulman. It was organised by Carmen Constantin, Eliana Lorch, and Paolo Perrone. Although originally planned for MIT, Boston, USA, the research week was held virtually from June 29 to July 3, 2020.</p>
     
 </main>
     <!-- Optional JavaScript -->
