--- a/about.html
+++ b/about.html
@@ -50,11 +50,20 @@
 
     <h1>The Adjoint School</h1>
 
-    <p> and now i'll write some more stuff</p>
+    <p>The Adjoint School is an annual research school in applied category theory.</p>
 
-    <p> and now i'll write some more stuff</p>
+    <p>By the end of the school, each participant will:</p>
+    <ul>
+        <li>be familiar with the language, goals, and methods of four prominent, current research directions in applied category theory;</li>
+        <li>have worked intensively on one of these research directions, mentored by an expert in the field; and</li>
+        <li>know other early career researchers interested in applied category theory.</li>
+    </ul>
+    <p>Traditionally the Adjoint School Research Week is held the week prior to the annual International Conference on Applied Category Theory, in the same location. Projects from the School are presented during this conference, and the program is designed to equip students to fully participate in the conference.</p>
+    <p>
+      The Adjoint School is designed primarily for graduate students and new researchers, but is open to all. We particularly encourage those from underrepresented groups in applied category, as well as those who focus more on applied research or industry practice, to apply.
+    </p>
 
-    <p> and now i'll write some more stuff</p>
+    <p>The Adjoint School takes place over two phases: an online reading seminar, and an in-person research week.</p>
 </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
