--- a/apply.html
+++ b/apply.html
@@ -48,13 +48,10 @@
 
       <main role="main" class="container">
 
-    <h1>The Adjoint School</h1>
+    <h1>Apply</h1>
 
-    <p> and now i'll write some more stuff</p>
+    <p>Applications for the 2021 Adjoint School will open October 2020. More details will be available on this page when applications open.</p>
 
-    <p> and now i'll write some more stuff</p>
-
-    <p> and now i'll write some more stuff</p>
 </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
