--- a/contact.html
+++ b/contact.html
@@ -48,13 +48,9 @@
 
       <main role="main" class="container">
 
-    <h1>The Adjoint School</h1>
+    <h1>Contact</h1>
 
-    <p> and now i'll write some more stuff</p>
-
-    <p> and now i'll write some more stuff</p>
-
-    <p> and now i'll write some more stuff</p>
+    <p>The organisers of the Adjoint School can be contacted at .</p>
 </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
