--- a/index.html
+++ b/index.html
@@ -50,11 +50,10 @@
 
     <h1>The Adjoint School</h1>
 
-    <p> and now i'll write some more stuff</p>
+    <p>The Adjoint School is an annual research school in applied category theory. Its purpose is to build community and skills in applied category theory research through mentorship from leading researchers. 
+    </p>
 
-    <p> and now i'll write some more stuff</p>
 
-    <p> and now i'll write some more stuff</p>
 </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
