--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
 
     <p>The Adjoint School is an annual research school in applied category theory. Its purpose is to build community and skills in applied category theory research through mentorship from leading researchers. 
     </p>
+    <p>
+      In 2021 it will be held in Cambridge, UK.
+    </p>
 
 
 </main>
