--- a/index.html
+++ b/index.html
@@ -50,11 +50,18 @@
 
     <h1>The Adjoint School</h1>
 
-    <p>The Adjoint School is an annual research school in applied category theory. Its purpose is to build community and skills in applied category theory research through mentorship from leading researchers. 
+    <p>The Adjoint School is an annual research school in applied category theory. It's purpose is to
+        <ol>
+            <li> Build the applied category theory community,</li>
+            <li> Develop the skills to read and research in applied category theory,</li>
+            <li> Develop domain specific knowledge in a specific area of applied category theory</li> 
+        </ol>
+        through mentorship by leading researchers in the field.
     </p>
     <p>
       In 2021 it will be held in Cambridge, UK.
     </p>
+
 
 
 </main>
