--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <p>The Adjoint School is an annual research school in applied category theory. It's purpose is to
         <ol>
             <li> Build the applied category theory community,</li>
-            <li> Develop the skills to read and research in applied category theory,</li>
+            <li> Develop the skills to read and research in applied category theory, and</li>
             <li> Develop domain specific knowledge in a specific area of applied category theory</li> 
         </ol>
         through mentorship by leading researchers in the field.
