add list item to about

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
+
         <div class="collapse navbar-collapse" id="navbarsExampleDefault">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
@@ -54,6 +54,7 @@
 
     <p>By the end of the school, each participant will:</p>
     <ul>
+        <li> develop their skills in reading, reflecting, asking questions, presenting, and talking to other people about math </li>
         <li>be familiar with the language, goals, and methods of four prominent, current research directions in applied category theory;</li>
         <li>have worked intensively on one of these research directions, mentored by an expert in the field; and</li>
         <li>know other early career researchers interested in applied category theory.</li>
