--- a/about.html
+++ b/about.html
@@ -11,60 +11,96 @@
     <link rel="stylesheet" href="style.css">
 
     <title>The Adjoint School</title>
+    <link rel="icon" href="images/leftright.png">
+
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="index.html">The Adjoint School</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+      <nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
+          <a class="navbar-brand" href="index.html">The Adjoint School</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="apply.html">Apply</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown01">
-                <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
-                <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
-                <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="inclusivity.html">Inclusivity</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-    </nav>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarsExampleDefault">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="apply.html">Apply</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                  <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
+                  <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
+                  <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="inclusivity.html">Inclusivity</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+      </nav>
 
 
       <main role="main" class="container">
 
-    <h1>The Adjoint School</h1>
+          <h1> School Overview </h1>
 
-    <p>The Adjoint School is an annual research school in applied category theory.</p>
+              <div class="row">
 
-    <p>By the end of the school, each participant will:</p>
-    <ul>
-        <li> develop their skills in reading, reflecting, asking questions, presenting, and talking to other people about math </li>
-        <li>be familiar with the language, goals, and methods of four prominent, current research directions in applied category theory;</li>
-        <li>have worked intensively on one of these research directions, mentored by an expert in the field; and</li>
-        <li>know other early career researchers interested in applied category theory.</li>
-    </ul>
-    <p>Traditionally the Adjoint School Research Week is held the week prior to the annual International Conference on Applied Category Theory, in the same location. Projects from the School are presented during this conference, and the program is designed to equip students to fully participate in the conference.</p>
-    <p>
-      The Adjoint School is designed primarily for graduate students and new researchers, but is open to all. We particularly encourage those from underrepresented groups in applied category, as well as those who focus more on applied research or industry practice, to apply.
-    </p>
+                  <div class = "col-md-6 v-align">
+                      <p>
+                          Throughout the course of the school, each participant will
+                          <ul>
+                              <li> learn to read, write, and present in the language of prominent research directions in applied category theory, </li>
+                              <li> work intensively on one of these research directions, mentored by an expert in the field, and </li>
+                              <li> develop relationships with other early-career applied category theorists </li>
+                          </ul>
+                      </p>
+                  </div>
 
-    <p>The Adjoint School takes place over two phases: an online reading seminar, and an in-person research week.</p>
+                  <div class="col-md-6 v-align">
+                        <center>
+                          <table>
+                              <tr> <td><i>November </i></td> <td> applications open</td> </tr>
+                              <tr> <td><i>January </i></td> <td> participants announced</td> </tr>
+                              <tr> <td><i>February - June </i></td> <td> online seminar</td> </tr>
+                              <tr> <td><i>July X - Y </i></td> <td> in-person research week</td> </tr>
+                              <tr> <td><i>July Y - Z </i></td> <td> Applied Category Theory conference</td> </tr>
+                          </table>
+                      </center>
+
+                  </div>
+              </div>
+              <hr></hr>
+
+              <div class="row">
+
+                  <div class="col">
+
+                      <p>
+                          Participants are divided into four-person project teams. Each project is guided by a mentor and a TA. The Adjoint School has two main components --- an online seminar that meets regularly between February and July, and an in-person research week in Cambridge, in July [insert actual date].
+                      </p>
+                      <p>
+                          During the online seminar, we will read, discuss, and respond to papers chosen by the project mentors. Every other week, a pair of participants will present a paper which will be followed by a group discussion. Leading up to this presentation, study groups will meet to digest the reading in progress, and students will submit reading responses.  After the presentation, the presenters will summarize the paper into a blog post for  <a href="https://golem.ph.utexas.edu/category/">The n-Category Cafe</a>.
+                      </p>
+                      <p>
+                          The in-person research week will be held the week prior to the International Conference on Applied Category Theory and in the same location. During the week, participants work intensively with their research group under the guidance of their mentor. Projects from the Adjoint School will be presented during this conference. Both components of the school aim to develop a sense of belonging and camaraderie in students so that they can fully participate in the conference, for example by attending talks and chatting with other conference goers.
+                      </p>
+
+                  </div>
+              </div>
+              <hr> </hr>
+              <h3> Contact Us </h3>
+              <p>The organizers of the Adjoint School can be contacted at <a href="mailto:actadjointschool@gmail.com">actadjointschool@gmail.com</a>.</p>
+
+
 </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
