--- a/inclusivity.html
+++ b/inclusivity.html
@@ -11,99 +11,62 @@
     <link rel="stylesheet" href="style.css">
 
     <title>The Adjoint School</title>
+    <link rel="icon" href="images/leftright.png">
+
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="index.html">The Adjoint School</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="apply.html">Apply</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown01">
-                <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
-                <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
-                <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="inclusivity.html">Inclusivity</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-    </nav>
+      <nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
+          <a class="navbar-brand" href="index.html">The Adjoint School</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
 
+          <div class="collapse navbar-collapse justify-content-end" id="navbarsExampleDefault">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="apply.html">Apply</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                  <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
+                  <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
+                  <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="inclusivity.html">Inclusivity</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+      </nav>
 
       <main role="main" class="container">
 
-    <h1>Inclusivity and values</h1>
+    <h1>Inclusivity and Values</h1>
 
+    <p> As a touchstone, we adopt this <a href = "http://eugeniacheng.com/inclusivity/">Manifesto of Inclusivity</a> and commit to creating a School and application process that welcomes anybody interested in applied category theory.  </p>
 
+    <hr></hr>
 
-    http://eugeniacheng.com/inclusivity/
-    <h2>Statement of Values</h2>
-    The Adjoint School seeks to uphold the values of the applied category theory community:
-    <h3>Why a statement of values?</h3>
-
-    <p>In the applied category theory community, we believe that category theory can model aspects of the ‘real world’. This central, world-focused orientation using a tool commonly associated with pure mathematics is surprising to some—“Category Theory can be applied?”—but this search for practical application is what brings us together as a community.</p>
+    <p> We recognize that the complex factors of our participants’ past experiences and present circumstances may explicitly or implicitly make it more difficult for them to get what they want out of the program. We seek to mitigate these difficulties by taking the following concrete steps and more, and we welcome further suggestions. </p>
 
     <p>
-        A secondary theme is the desire for our approach to have a wide and positive impact. Through the influence of formative institutions, such as the Azimuth Project, the Catsters, the 
-        <em>n</em>
-        -Category Cafe, and 
-        <em>n</em>
-        Lab, many members of this community not only aim for their research to be accessible and have an impact, but for this impact to move us towards a greener world, a fairer world, a more interesting world, a more peaceful world.
+        <ul>
+            <li> We are writing a grant to be able to fund needful students to attend the in-person research week </li>
+            <li> In both components of the school, we will focus on the process of research instead of on the outcomes </li>
+            <li> We are designing modules of the online component of the school that enable students to share their voices in a variety of modes </li>
+            <li> We will guide  participants to develop explicit norms for supportive and inclusive behavior </li>
+            <li> We will moderate the whole-group discussions and written components to ensure they keep within School norms. </li>
+        </ul>
     </p>
 
-    <p>As our community grows, it is a good moment to reflect on the values we share. By articulating them together, we can use them to guide the decisions we are required to make as a community.&nbsp;</p>
-
-    <p>Examples of such decisions respond to questions such as: How do we balance fees for different groups at the International Applied Category Theory conference? Who do we invite to speak at our seminars and conferences? Who can be given a platform to speak without editorial review, whose logos can be displayed, and who can recruit at our events? What sources do we accept funding from? With our funding, what do we prioritise? Do we use it to attract top-profile speakers who can bring new insights into our research, or on travel subsidies for those from low income areas?&nbsp;</p>
-
-    <p>Our values may stem from abstract principles, but the decisions we must make are deeply practical, and they will reveal our values whether we have articulated them or not.</p>
-
-    <p>It is our hope that we as a community will continue to have conversations about these values, and allow the principles we articulate to grow with the community, responding to its needs and to the changing world. While the values articulated here are intended as guidance for coordinated activity, we acknowledge that there will inevitably be material differences between the values of different members of the community, and request that above all, our respect and care for each other always be evident.</p>
-
-    <h3>Values</h3>
-
-    <p>
-        <strong>The pursuit of scientific knowledge</strong>
-    </p>
-
-    <p>We are first and foremost a community of scientists and scholars, and we seek to advance category theory and explore the ways it can be used to model, predict, and shape the world around us. This value means that we hold ourselves to high standards of rigour in our presentations and papers, endeavour to communicate clearly and honestly, and engage seriously with the ideas of others. It furthermore means that we prize and defend academic freedom; in particular our research and editorial autonomy is under no circumstance for sale.</p>
-
-    <p>
-        <strong>Community, respect, and mutual well-being</strong>
-    </p>
-
-    <p>We believe in supporting each other and supporting the health of the community as a whole. We commit our time and resources to organise events, review papers, and serve on committees. We proactively provide mentorship, supporting the learning and careers of those less senior than us. We recognise the contribution that exposition and teaching makes to our community. We do not tolerate harassment and discrimination, and take active steps to prevent it, and we address it when it does occur. We treat all members with respect.&nbsp;</p>
-
-    <p>
-        <strong>Inclusion and equity</strong>
-    </p>
-
-    <p>We believe that our community should be open to anyone who wants to be part of it. Our community is diverse in culture, nationality, and lived experience. We celebrate this diversity and endeavour to ensure our community spaces are not dominated by any particular social or cultural group. We recognise that certain circumstances can make it more difficult for some people to join our community than others, and we seek to provide ways to overcome these difficulties. Thus we are committed to outreach efforts, support open access publishing, reduce costs of participation, work hard to change our culture to be ever more inclusive, and take a broad perspective on ‘merit’. We recognise that inclusivity and diversity are sources of excellence in our community’s research and scholarship.</p>
-
-    <p>
-        <strong>Awareness of our relationship to the wider world&nbsp;</strong>
-    </p>
-
-    <p>We believe that category theory has the power to make an impact in the world, and we recognise the privilege this grants us as a community. With this privilege comes responsibility: we must be sensitive as a community to the people and resources that support us, and we must consider the social and environmental impact that our research and activities have on the greater world. We engage with, rather than shy away from, the possible negative effects of our work. We do not pursue research towards the harm of others. We engage in dialogue with the wider public about our work and its impact, endeavor to ensure the experiences of our community reflect those of whom our work impacts, and are proactive in ensuring those underrepresented in our community are not worse off for this fact.&nbsp;</p>
-
-    <p>We record these values to enable us to better cooperate in our work towards them. We ask that they not be used in judgement, but to lift each other up.</p>
-    https://www.appliedcategorytheory.org/statement-of-values/
-    
 
 </main>
     <!-- Optional JavaScript -->
