--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
     <link rel="stylesheet" href="style.css">
 
     <title>The Adjoint School</title>
+
+    <link rel="icon" href="images/leftright.png">
+
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
         <a class="navbar-brand" href="index.html">The Adjoint School</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-      
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-          <ul class="navbar-nav mr-auto">
+
+        <div class="collapse navbar-collapse justify-content-end" id="navbarsExampleDefault">
+          <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
             </li>
@@ -46,21 +49,38 @@
     </nav>
 
 
+
       <main role="main" class="container">
+
 
     <h1>The Adjoint School</h1>
 
-    <p>The Adjoint School is an annual research school in applied category theory. It's purpose is to
-        <ol>
-            <li> Build the applied category theory community,</li>
-            <li> Develop the skills to read and research in applied category theory,</li>
-            <li> Develop domain specific knowledge in a specific area of applied category theory</li> 
-        </ol>
-        through mentorship by leading researchers in the field.
-    </p>
-    <p>
-      In 2021 it will be held in Cambridge, UK.
-    </p>
+    <div class="row">
+        <div class="col-lg-8">
+            <p>The Adjoint School is an annual research school in applied category theory. It aims to
+                <ul>
+                    <li> foster an open-hearted and open-minded environment where new applied category theorists develop the skills of research,</li>
+                    <li> welcome new researchers into cutting-edge research programs in applied category theory, and</li>
+                    <li> grow and strengthen the applied category theory community</li>
+                </ul>
+            </p>
+        </div>
+        <div class="col-lg-4 v-align">
+            <img src="images/ACT-actionshot.jpg" class="rounded img-fluid"></img>
+        </div>
+    </div>
+
+    <hr></hr>
+
+
+    </div>
+
+
+
+
+
+
+
 
 
 
