--- a/2018.html
+++ b/2018.html
@@ -11,39 +11,71 @@
     <link rel="stylesheet" href="style.css">
 
     <title>The Adjoint School</title>
+    <link rel="icon" href="images/leftright.png">
+
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="index.html">The Adjoint School</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="apply.html">Apply</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown01">
-                <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
-                <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
-                <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="inclusivity.html">Inclusivity</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-    </nav>
+      <nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
+          <a class="navbar-brand" href="index.html">The Adjoint School</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse justify-content-end" id="navbarsExampleDefault">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="apply.html">Apply</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                  <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
+                  <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
+                  <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="inclusivity.html">Inclusivity</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+      </nav><nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
+          <a class="navbar-brand" href="index.html">The Adjoint School</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse justify-content-end" id="navbarsExampleDefault">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="apply.html">Apply</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                  <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
+                  <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
+                  <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="inclusivity.html">Inclusivity</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+      </nav>
 
 
 
@@ -51,112 +83,158 @@
 
     <h1>The Adjoint School 2018</h1>
 
-    <p>The 2018 Adjoint School featured projects mentored by John Baez, Aleks Kissinger, Martha Lewis, and Pawel Sobocinski. It was organised by Brendan Fong and Nina Otter. The research week was held at the Lorentz Center, Leiden, The Netherlands, in May 2018. </p>
+        <p>The 2018 Adjoint School featured projects mentored by John Baez, Aleks Kissinger, Martha Lewis, and Pawel Sobocinski. It was organised by Brendan Fong and Nina Otter. The research week was held at the Lorentz Center, Leiden, The Netherlands, in May 2018. </p>
 
-    <h2>Research projects</h2>
-    <p>
-        <b>John Baez: Semantics for open Petri nets and reaction networks</b>
-        <br/>
+    <div class="row">
+        <div class="col-md-2">
+        </div>
+        <div class="col-md-8">
+        <img src="images/2018-group.jpg" class="rounded img-fluid group"></img>
+    </div>
+    <div class="col-md-2">
+    </div>
+</div>
 
-        Petri nets and reaction networks are widely used to describe systems of interacting entities in computer science, chemistry and other fields, but the study of open Petri nets and reaction networks is new, and raise many new questions connected to Lawvere&#8217;s &#8220;functorial semantics&#8221;.
-        <br/>
-        <i>Reading: Fong; Baez and Pollard.</i>
-    </p>
-    <p>
-        <b>Aleks Kissinger: Unification of the logic of causality</b>
-        <br/>
+    <hr></hr>
 
-        Employ the framework of (pre-)causal categories to unite notions of causality and techniques for causal reasoning which occur in classical statistics, quantum foundations, and beyond.
-        <br/>
-        <i>Reading: Kissinger and Uijlen; Henson, Lal, and Pusey.</i>
-    </p>
-    <p>
-        <b>Martha Lewis: Compositional approaches to linguistics and cognition</b>
-        <br/>
+    <h2> Research Projects </h2>
+    <div class = "row">
+        <div class= "col-lg-6 ">
+            <div class = "past-proj">
+                <center>
+                    <h5>Semantics for open Petri nets and reaction networks </h5>
+                    <p> <i> Mentored by John Baez </i></p>
+                </center>
+                <p>
+                    Petri nets and reaction networks are widely used to describe systems of interacting entities in computer science, chemistry and other fields, but the study of open Petri nets and reaction networks is new, and raise many new questions connected to Lawvere&#8217;s &#8220;functorial semantics&#8221;.
+                </p>
 
-        Use compact closed categories to integrate compositional models of meaning with distributed, geometric, and other meaning representations in linguistics and cognitive science.
-        <br/>
-        <i>Reading: Coecke, Sadrzadeh, and Clark; Bolt, Coecke, Genovese, Lewis, Marsden, and Piedeleu.</i>
-    </p>
-    <p>
-        <b>Pawel Sobocinski: Modelling of open and interconnected systems</b>
-        <br/>
+                <p> Blog posts:
+                <ul>
+                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
+                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
+            </div>
+        </div>
+        <div class= "col-lg-6 ">
+            <div class = "past-proj">
+                <center>
+                    <h5>Unification of the logic of causality </h5>
+                    <p> <i> Mentored by Aleks Kissinger </i></p>
+                </center>
+                <p>
+                    Employ the framework of (pre-)causal categories to unite notions of causality and techniques for causal reasoning which occur in classical statistics, quantum foundations, and beyond.
+                </p>
 
-        Use Carboni and Walters&#8217; bicategories of relations as a multidisciplinary algebra of open and interconnected systems.
-        <br/>
-        <i>Reading: Carboni and Walters; Willems.</i>
- 
-    <h2>Reading list</h2>
+                <p> Blog posts:
+                <ul>
+                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
+                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
+            </div>
+        </div>
+    </div>
+
+    <div class = "row">
+        <div class= "col-lg-6 ">
+            <div class = "past-proj">
+                <center>
+                    <h5>Compositional approaches to linguistics and cognition </h5>
+                    <p> <i> Martha Lewis </i></p>
+                </center>
+                <p>
+                    Use compact closed categories to integrate compositional models of meaning with distributed, geometric, and other meaning representations in linguistics and cognitive science.
+
+                </p>
+
+                <p> Blog posts:
+                <ul>
+                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
+                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
+            </div>
+        </div>
+        <div class= "col-lg-6 ">
+            <div class = "past-proj">
+                <center>
+                    <h5>Modelling of open and interconnected systems</h5>
+                    <p> <i> Mentored by Pawel Sobocinski </i></p>
+                </center>
+                <p>
+                    Use Carboni and Walters’ bicategories of relations as a multidisciplinary algebra of open and interconnected systems.
+                </p>
+
+                <p> Blog posts:
+                <ul>
+                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
+                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
+            </div>
+        </div>
+    </div>
+
+    <!-- <h2>Reading list</h2>
     <ul>
         <li>
-            Jan 8: A. Kissinger and S. Uijlen. 
+            Jan 8: A. Kissinger and S. Uijlen.
             <a href="https://arxiv.org/abs/1701.04732">A categorical semantics for causal structure</a>
-            , 
+            ,
             <i>32nd Annual ACM/IEEE Symposium on Logic in Computer Science (LICS)</i>
             , pp. 1-12, 2017
         </li>
         <li>
-            Jan 22: B. Coecke, M. Sadrzadeh, and S. Clark, 
+            Jan 22: B. Coecke, M. Sadrzadeh, and S. Clark,
             <a href="https://arxiv.org/abs/1003.4394">Mathematical foundations for a compositional distributional model of meaning</a>
-            , 
+            ,
             <i>Linguistic Analysis</i>
              36(1-4), pp. 345-384, 2010.
         </li>
         <li>
-            Feb 5: A. Carboni and R.F.C. Walters. 
+            Feb 5: A. Carboni and R.F.C. Walters.
             <a href="http://www.sciencedirect.com/science/article/pii/0022404987901216">Cartesian bicategories I</a>
-            , 
+            ,
             <i>Journal of Pure and Applied Algebra</i>
              49(1-2), pp.11-32, 1987.
         </li>
         <li>
-            Feb 19: B. Fong, 
+            Feb 19: B. Fong,
             <a href="http://www.tac.mta.ca/tac/volumes/30/33/30-33abs.html">Decorated cospans</a>
-            , 
+            ,
             <i>Theory and Applications of Categories</i>
              30, pp. 1096-1120, 2015.
         </li>
         <li>
-            Mar 5: J. Bolt, B. Coecke, F. Genovese, M. Lewis, D. Marsden, and R. Piedeleu. 
+            Mar 5: J. Bolt, B. Coecke, F. Genovese, M. Lewis, D. Marsden, and R. Piedeleu.
             <a href="https://arxiv.org/abs/1703.08314">
                 <i>Interacting Conceptual Spaces I: Grammatical Composition of Concepts</i>
             </a>
             , arXiv preprint, 2017.
         </li>
         <li>
-            Mar 19: J. Baez and B. Pollard, 
+            Mar 19: J. Baez and B. Pollard,
             <a href="http://www.worldscientific.com/doi/abs/10.1142/S0129055X17500283">A compositional framework for reaction networks</a>
-            , 
+            ,
             <i>Reviews in Mathematical Physics</i>
              29:1750028, 2017.
         </li>
         <li>
-            Apr 2: J.C. Willems, 
+            Apr 2: J.C. Willems,
             <a href="http://homes.esat.kuleuven.be/%7Ejwillems/Articles/JournalArticles/2007.1.pdf">The behavioral approach to open and interconnected systems</a>
-            , 
+            ,
             <i>IEEE Control Systems</i>
              27(6), pp. 46-99, 2007.
         </li>
         <li>
-            Apr 16: J. Henson, R. Lal, and M. Pusey, 
+            Apr 16: J. Henson, R. Lal, and M. Pusey,
             <a href="http://iopscience.iop.org/article/10.1088/1367-2630/16/11/113043/meta">Theory-independent limits on correlations from generalised Bayesian networks</a>
-            , 
+            ,
             <i>New Journal of Physics</i>
              27, 2014.
         </li>
     </ul>
 
-    <h2>Blog posts</h2>
-    The following blog posts were produced by the students.
-    <ul>
-      <li>Hi there</li>
-    </ul>
 
     <h2>Papers</h2>
     Following the research week, the working groups produced the papers:
     <ul>
       <li>Hi there</li>
-    </ul>
+    </ul> -->
 </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
