--- a/apply.html
+++ b/apply.html
@@ -9,48 +9,50 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="images/leftright.png">
+
 
     <title>The Adjoint School</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="index.html">The Adjoint School</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="apply.html">Apply</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
-              <div class="dropdown-menu" aria-labelledby="dropdown01">
-                <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
-                <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
-                <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="inclusivity.html">Inclusivity</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-          </ul>
-        </div>
-    </nav>
+      <nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
+          <a class="navbar-brand" href="index.html">The Adjoint School</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse justify-content-end" id="navbarsExampleDefault">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="apply.html">Apply</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                  <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
+                  <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
+                  <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="inclusivity.html">Inclusivity</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+      </nav>
 
 
       <main role="main" class="container">
 
     <h1>Apply</h1>
 
-    <p>Applications for the 2021 Adjoint School will open October 2020. More details will be available on this page when applications open.</p>
+    <p>Applications for the 2021 Adjoint School will open in November 2020. More details will be available on this page when applications open.</p>
 
 </main>
     <!-- Optional JavaScript -->
