--- a/2019.html
+++ b/2019.html
@@ -109,10 +109,6 @@
                     The ZX-calculus is a graphical calculus based on the category-theoretical formulation of quantum mechanics.  A complete set of graphical rewrite rules is known for the ZX-calculus, but not for quantum circuits over any universal gate set.  In this project, we aim to develop new strategies for using the ZX-calculus to simplify quantum circuits.
                 </p>
 
-                <p> Blog posts:
-                <ul>
-                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
-                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
             </div>
         </div>
         <div class= "col-lg-6 ">
@@ -125,10 +121,6 @@
                     We all know that 2+2+1+1 evaluates to 6. A less familiar notion is that it can *partially evaluate* to 5+1.  In this project, we aim to study the compositional structure of partial evaluation in terms of monads and the bar construction and see what this has to do with financial risk via second-order stochastic dominance.
                 </p>
 
-                <p> Blog posts:
-                <ul>
-                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
-                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
             </div>
         </div>
     </div>
@@ -144,10 +136,6 @@
 Turing categories form a categorical setting for studying computability without bias towards any particular model of computation. It is not currently clear, however, that Turing categories are useful to study practical aspects of computation such as complexity. This project revolves around the systematic study of step-based computation in the form of stack-machines, the resulting Turing categories, and complexity classes.  This will involve a study of the interplay between traced monoidal structure and computation. We will explore the idea of stack machines qua programming languages, investigate the expressive power, and tie this to complexity theory. We will also consider questions such as the following: can we characterize Turing categories arising from stack machines? Is there an initial such category? How does this structure relate to other categorical structures associated with computability?
                 </p>
 
-                <p> Blog posts:
-                <ul>
-                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
-                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
             </div>
         </div>
         <div class= "col-lg-6 ">
@@ -160,15 +148,12 @@ Turing categories form a categorical setting for studying computability without 
                     In functional programming, optics are ways to zoom into a specific part of a given data type and mutate it.  Optics come in many flavors such as lenses and prisms and there is a well-studied categorical viewpoint, known as profunctor optics.  Of all the optic types, only the traversal has resisted a derivation from first principles into a profunctor description. This project aims to do just this.
                 </p>
 
-                <p> Blog posts:
-                <ul>
-                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
-                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
             </div>
         </div>
     </div>
 
 
+    <div class = "row">
     <div class= "col-lg-6 ">
             <div class = "past-proj">
                 <center>
@@ -179,13 +164,8 @@ Turing categories form a categorical setting for studying computability without 
                     Distributional semantics argues that meanings of words can be represented by the frequency of their co-occurrences in context. A model extending distributional semantics from words to sentences has a categorical interpretation via Lambek’s syntactic calculus or pregroups. In this project, we intend to further extend this model to reason about dialogue and discourse utterances where people interrupt each other, there are references that need to be resolved, disfluencies, pauses, and corrections. Additionally, we would like to design experiments and run toy models to verify predictions of the developed models. 
                 </p>
 
-                <p> Blog posts:
-                <ul>
-                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
-                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
             </div>
         </div>
-    </div>
 
         <div class= "col-lg-6 ">
             <div class = "past-proj">
@@ -196,14 +176,9 @@ Turing categories form a categorical setting for studying computability without 
                 <p>
                     An autopoietic organization—anything from a living animal to a political party to a football team—is a system that is responsible for adapting and changing itself, so as to persist as events unfold. We want to develop mathematical abstractions that are suitable to found a scientific study of autopoietic organizations. To do this, we’ll begin by using behavioral mereology and graphical logic to frame a discussion of autopoeisis, most of all what it is and how it can be best conceived. We do not expect to complete this ambitious objective; we hope only to make progress toward it.
                 </p>
-
-                <p> Blog posts:
-                <ul>
-                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
-                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
             </div>
         </div>
-    </div>
+                </div>
 
     <!-- <h2>Reading list</h2>
     <ul>
