--- a/2019.html
+++ b/2019.html
@@ -89,7 +89,7 @@
         <div class="col-md-2">
         </div>
         <div class="col-md-8">
-        <img src="images/2018-group.jpg" class="rounded img-fluid group"></img>
+            <img src="images/group-photo-19.jpg" class="rounded img-fluid group"></img>
     </div>
     <div class="col-md-2">
     </div>
