--- a/2020.html
+++ b/2020.html
@@ -13,45 +13,228 @@
     <title>The Adjoint School</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
-      <a class="navbar-brand" href="index.html">The Adjoint School</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-    
-      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="about.html">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="apply.html">Apply</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
-            <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
-              <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
-              <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="inclusivity.html">Inclusivity</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
-          </li>
-        </ul>
-      </div>
-  </nav>
+      <nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
+          <a class="navbar-brand" href="index.html">The Adjoint School</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse justify-content-end" id="navbarsExampleDefault">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="apply.html">Apply</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                  <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
+                  <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
+                  <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="inclusivity.html">Inclusivity</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+      </nav><nav class="navbar navbar-expand-md navbar-dark bg-purple fixed-top">
+          <a class="navbar-brand" href="index.html">The Adjoint School</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse justify-content-end" id="navbarsExampleDefault">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="about.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="apply.html">Apply</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Past Schools</a>
+                <div class="dropdown-menu" aria-labelledby="dropdown01">
+                  <a class="dropdown-item" href="2018.html">Adjoint School 2018</a>
+                  <a class="dropdown-item" href="2019.html">Adjoint School 2019</a>
+                  <a class="dropdown-item" href="2020.html">Adjoint School 2020</a>
+                </div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="inclusivity.html">Inclusivity</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+      </nav>
+
 
 
       <main role="main" class="container">
 
     <h1>The Adjoint School 2020</h1>
 
-    <p>The 2020 Adjoint School featured projects mentored by Michael Johnson, Valeria de Paiva, Michael Shulman. It was organised by Carmen Constantin, Eliana Lorch, and Paolo Perrone. Although originally planned for MIT, Boston, USA, the research week was held virtually from June 29 to July 3, 2020.</p>
-    
+    <p>
+        The 2020 Adjoint School featured projects mentored by Michael Johnson, Nina Otter, Valeria de Paiva, and Michael Shulman. It was organised by Daniel Cicala and Jules Hedges. The research week was held at Oxford in July 2019.
+    </p>
+
+
+    <hr></hr>
+
+    <h2> Research Projects </h2>
+    <div class = "row">
+        <div class= "col-lg-6 ">
+            <div class = "past-proj">
+                <center>
+                    <h5> Categories of Maintainable Relations</h5>
+                    <p> <i> Mentored by Michael Johnson </i></p>
+                </center>
+                <p>
+                    <p>
+                        Relations have many important applications, and correspondingly the category theoretic study of relations is well-developed. Typically, relations from X to Y are defined as subobjects of the product of X and Y, and if X and Y are objects in a regular category C then we can construct a bicategory rel(C) whose morphisms are relations in C.  Conversely bicategories that arise as such a rel(C) were studied in a recent ACT School which examined the seminal paper “Cartesian Bicategories I” by Carboni and Walters.
+                    </p>
+
+                    <p>
+                        In this project we study (bi)categories of maintainable relations between categories.  In this situation, the X and Y of the last paragraph, will be categories, and C will be Cat, the category of (small) categories. Cat is not a regular category, so we need to take an alternative approach to relations that uses equivalence classes of spans in C.  Maintainable relations, which are instances of bidirectional transformations (cf lenses), are relations R between categories X and Y with extra structure so that if objects x of X and y of Y are R-related by a specific witness r, and if f: x –> x’ is an arrow of X, then the extra structure gives (functorially) an arrow g: y –> y’ such that x’ and y’ are again R-related, and by a specific witness r’ (cf symmetric delta lenses).  Commonly in applications the relation R is called a “consistency relation” and the extra structure is called “consistency restoration” (or in lens terms, change propagation).
+                    </p>
+
+                    <p>
+                        This is a rich area with many interesting interactions involving bicategories of spans, lenses (both symmetric and asymmetric), fibrations and generalisations of fibred category theory, as well as direct (and motivating) applications in database design and system interoperation and even machine learning.  It is a mix of interesting theoretical questions and concrete applications.  We will attack open questions involving exactness properties of categories of maintainable relations, we will seek to understand the interactions with classical work such as that of Carboni and Walters, and we will develop concrete examples of system interactions that are modelled by maintainable relations.
+                    </p>
+                </p>
+
+            </div>
+        </div>
+        <div class= "col-lg-6 ">
+            <div class = "past-proj">
+                <center>
+                    <h5>Diagrammatic and algebraic approaches to distances between persistence modules </h5>
+                    <p> <i> Mentored by Nina Otter </i></p>
+                </center>
+                <p>
+                    <p>
+                        Techniques and ideas from topology are being applied to the study of data with increasing frequency and success. One of the most well-known methods of this type is persistent homology, in which one associates a multiparameter family of spaces to a data set and studies how the holes evolve across the parameter space. The resulting algebraic object is called a persistence module. For one-parameter families of spaces, isomorphism classes of persistence modules can be completely classified by discrete invariants, while in the multiparameter case the situation is more delicate.
+                    </p>
+
+                    <p>
+                        Distances between persistence modules are crucial both from a theoretical point of view — for instance, to study the stability of invariants associated to persistence modules —, as well as for applications. The standard distances used for one-parameter persistence modules are L^p distances called Wasserstein distances. For p = ∞ this distance is also called bottleneck distance, and it has arguably been the most used and studied distance for persistence modules. While the original definition is combinatorial, it has equivalent categorical and algebraic formulations called interleaving distance [2, 3].
+                    </p>
+
+                    <p>
+                        In this project we will study different ways to give diagrammatic and algebraic formulations of Wasserstein distances for multiparameter persistence modules. Our motivation will be to investigate the stability of the invariants for multiparameter persistence modules introduced in [4], and our point of departure will be [1], in which the authors study how to generalise Wasserstein distances for p < ∞.
+                    </p>
+                </p>
+
+            </div>
+        </div>
+    </div>
+
+    <div class = "row">
+        <div class= "col-lg-6 ">
+            <div class = "past-proj">
+                <center>
+                    <h5> Dialectica categories of Petri nets </h5>
+                    <p> <i> Mentored by Valeria de Paiva</i></p>
+                </center>
+                <p>
+Dialectica categories (also called dialectica spaces) were introduced in the doctoral work of de Paiva ​[1]​, where they were used to model Gödel’s dialectica interpretation ​[2]​, as well as to provide categorical models of Girard’s linear logic ​[3]​. Since then several applications of dialectica categories, have been described. We want to have some more of them.
+
+This project is about categories of Petri nets. The goal is to update and develop the work started by Carolyn Brown and Doug Gurr in ​[4]​ and further pursued in ​[5]​ and ​[6]​. Neither of the latter two have been officially published, but they have had some impact on the concurrency community, as shown by their number of citations. It seems sensible to see whether the work on Petri nets and concurrency has proved or disproved the original suggestions.
+
+Petri nets are an extremely popular model of concurrency, both in theory and in practice. They have several descriptions and variations in the literature. One of the interesting problems with Petri nets was to give a compositional theory of them. Brown and Gurr used dialectica categories to model a restricted class of Petri nets in ​[4]​. They were joined by de Paiva in ​[5]​, which generalized the previous work to nets of multiplicity greater than one. The mathematical basis was described in ​[6]​. Their nets have morphisms corresponding to simulations, which we believe are more flexible than the ones usually considered.
+                </p>
+
+            </div>
+        </div>
+        <div class= "col-lg-6 ">
+            <div class = "past-proj">
+                <center>
+                    <h5> A practical type theory for symmetric monoidal categories</h5>
+                    <p> <i> Mentored by Michael Shulman </i></p>
+                </center>
+                <p>
+                    Type theories are formal systems allowing us to reason about categorical structures by “treating their objects as if they were sets” in a formal sense.  While type theories for cartesian categorical structures are better-known, there are also “linear” type theories for non-cartesian structures. In this project we aim to construct a convenient type theory for reasoning about symmetric monoidal bicategories, which can be used to model many different kinds of open and interconnected systems.  We will build on recent results establishing a similar type theory for symmetric monoidal categories as well as coherence theorems for symmetric monoidal bicategories.
+                </p>
+
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- <h2>Reading list</h2>
+    <ul>
+        <li>
+            Jan 8: A. Kissinger and S. Uijlen.
+            <a href="https://arxiv.org/abs/1701.04732">A categorical semantics for causal structure</a>
+            ,
+            <i>32nd Annual ACM/IEEE Symposium on Logic in Computer Science (LICS)</i>
+            , pp. 1-12, 2017
+        </li>
+        <li>
+            Jan 22: B. Coecke, M. Sadrzadeh, and S. Clark,
+            <a href="https://arxiv.org/abs/1003.4394">Mathematical foundations for a compositional distributional model of meaning</a>
+            ,
+            <i>Linguistic Analysis</i>
+             36(1-4), pp. 345-384, 2010.
+        </li>
+        <li>
+            Feb 5: A. Carboni and R.F.C. Walters.
+            <a href="http://www.sciencedirect.com/science/article/pii/0022404987901216">Cartesian bicategories I</a>
+            ,
+            <i>Journal of Pure and Applied Algebra</i>
+             49(1-2), pp.11-32, 1987.
+        </li>
+        <li>
+            Feb 19: B. Fong,
+            <a href="http://www.tac.mta.ca/tac/volumes/30/33/30-33abs.html">Decorated cospans</a>
+            ,
+            <i>Theory and Applications of Categories</i>
+             30, pp. 1096-1120, 2015.
+        </li>
+        <li>
+            Mar 5: J. Bolt, B. Coecke, F. Genovese, M. Lewis, D. Marsden, and R. Piedeleu.
+            <a href="https://arxiv.org/abs/1703.08314">
+                <i>Interacting Conceptual Spaces I: Grammatical Composition of Concepts</i>
+            </a>
+            , arXiv preprint, 2017.
+        </li>
+        <li>
+            Mar 19: J. Baez and B. Pollard,
+            <a href="http://www.worldscientific.com/doi/abs/10.1142/S0129055X17500283">A compositional framework for reaction networks</a>
+            ,
+            <i>Reviews in Mathematical Physics</i>
+             29:1750028, 2017.
+        </li>
+        <li>
+            Apr 2: J.C. Willems,
+            <a href="http://homes.esat.kuleuven.be/%7Ejwillems/Articles/JournalArticles/2007.1.pdf">The behavioral approach to open and interconnected systems</a>
+            ,
+            <i>IEEE Control Systems</i>
+             27(6), pp. 46-99, 2007.
+        </li>
+        <li>
+            Apr 16: J. Henson, R. Lal, and M. Pusey,
+            <a href="http://iopscience.iop.org/article/10.1088/1367-2630/16/11/113043/meta">Theory-independent limits on correlations from generalised Bayesian networks</a>
+            ,
+            <i>New Journal of Physics</i>
+             27, 2014.
+        </li>
+    </ul>
+
+
+    <h2>Papers</h2>
+    Following the research week, the working groups produced the papers:
+    <ul>
+      <li>Hi there</li>
+    </ul> -->
 </main>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
