2018 Baez group organization

--- a/2018.html
+++ b/2018.html
@@ -103,16 +103,36 @@
             <div class = "past-proj">
                 <center>
                     <h5>Semantics for open Petri nets and reaction networks </h5>
-                    <p> <i> Mentored by John Baez </i></p>
+                    <p>  Mentor: <i>John Baez </i>
+                        <br>TA: <i> Someone </i>
+                    </p>
                 </center>
                 <p>
                     Petri nets and reaction networks are widely used to describe systems of interacting entities in computer science, chemistry and other fields, but the study of open Petri nets and reaction networks is new, and raise many new questions connected to Lawvere&#8217;s &#8220;functorial semantics&#8221;.
                 </p>
 
-                <p> Blog posts:
+                <hr> </hr>
+                <center> <p> Participants and Blog Posts </p> </center>
+
+                    <i> Eliana Lorch and Joshua Tan </i>
+                    <ul>
+                        <li> <b> Blog post: </b> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory</a></li>
+                        <li> Associated reading:  <a href="http://homes.esat.kuleuven.be/%7Ejwillems/Articles/JournalArticles/2007.1.pdf">The behavioral approach to open and interconnected systems</a>, <i> J.C. Willems </i> </li>
+                    </ul>
+
+                    <i> Sophie Libkind and David Jaz Myers </i>
+                    <ul>
+                        <li> <b> Blog post: </b> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> Logic and hypergraph categories</a></li>
+                        <li> Associated reading:  <a href="http://homes.esat.kuleuven.be/%7Ejwillems/Articles/JournalArticles/2007.1.pdf">Graphical Regular Logic</a>, <i> Fong and Spivak </i> </li>
+                    </ul>
+
+                <hr></hr>
+                <center> <p> Outcomes Following the Research Week </p> </center>
                 <ul>
-                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
-                    <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
+                    <li> <b> Publication: </b> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory</a></li>
+                    <li> <b> Presentation: </b>  <a href="http://homes.esat.kuleuven.be/%7Ejwillems/Articles/JournalArticles/2007.1.pdf">The behavioral approach to open and interconnected systems</a>, <i> J.C. Willems </i> </li>
+                </ul>
+
             </div>
         </div>
         <div class= "col-lg-6 ">
@@ -129,6 +149,9 @@
                 <ul>
                     <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
                     <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
+                </ul>
+                </p>
+
             </div>
         </div>
     </div>
@@ -149,6 +172,7 @@
                 <ul>
                     <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
                     <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
+                </ul>
             </div>
         </div>
         <div class= "col-lg-6 ">
@@ -165,6 +189,7 @@
                 <ul>
                     <li> <a href = "https://golem.ph.utexas.edu/category/2018/06/the_behavioral_approach_to_sys.html"> The Behavioral Approach to Systems Theory </a> </li>
                     <li> <a href = "https://golem.ph.utexas.edu/category/2018/02/hypergraph_categories_of_cospa.html"> Hypergraph Categories of Cospans </a> </li>
+                </ul>
             </div>
         </div>
     </div>
